# Brain-Tumor-Segmentation

./: Deep_learning_part_U_Net (1) (3).ipynb  Dockerfile  README.md  app.py  docker-compose.yml  logo.jfif  machine_learning_part_.py  pyproject.toml  random_forest_model.pkl:Zone.Identifier  requirements.txt
