[tool.poetry]
name = "poetry add streamlit torch torchvision pillow"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
scipy = "^1.14.1"
scikit-learn = "1.3.2"
streamlit = "^1.37.1"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
